==> analogdevicesinc/DAPLink/source/hic_hal/maxim/max32690/usbd_max32690.c <==
#include <string.h>
#include "rl_usb.h"
#include "util.h"
#include "max32690.h"
#include "usbhs_regs.h"
#include "tmr_regs.h"
#include "fcr_regs.h"
#include "usb_mxc.h"
#include "mxc_sys.h"
#include "mcr_regs.h"
#include "mxc_delay.h"
#include "usb_event.h"
#define __NO_USB_LIB_C
#include "usb_config.c"
#define EPNUM_MASK  (~USB_ENDPOINT_DIRECTION_MASK)

void USBD_Init (void)
{
    maxusb_cfg_options_t usb_opts;
    
    /* Start out in full speed */
    usb_opts.enable_hs = 0; /* 0:Full Speed     1:High Speed */
    usb_opts.delay_us = delay_us; /* Function which will be used for delays */
    usb_opts.init_callback = usbStartupCallback;
    usb_opts.shutdown_callback = usbShutdownCallback;

    memset(out_requests, 0, sizeof(MXC_USB_Req_t) * MXC_USBHS_NUM_EP);

    /* Initialize the usb module */
    if (MXC_USB_Init(&usb_opts) != 0) {
        while (1) {}
    }

    MXC_USB_EventEnable(MAXUSB_EVENT_NOVBUS, eventCallback, NULL);
    MXC_USB_EventEnable(MAXUSB_EVENT_VBUS, eventCallback, NULL);

    NVIC_EnableIRQ(USB_IRQn);
}

void USBD_Connect (BOOL con)
{
    if (con) {
        MXC_USB_Connect();
    } else {
        MXC_USB_Disconnect();
    }
}

void USBD_ConfigEP (USB_ENDPOINT_DESCRIPTOR *pEPD)
{
    maxusb_ep_type_t type;

    if (pEPD->bEndpointAddress & USB_ENDPOINT_DIRECTION_MASK) {
        type = MAXUSB_EP_TYPE_IN;
    } else {
        type = MAXUSB_EP_TYPE_OUT;
    }

    MXC_USB_ConfigEp(pEPD->bEndpointAddress & EPNUM_MASK, type, pEPD->wMaxPacketSize);
}

void USBD_EnableEP (U32 EPNum)
{
    if (EPNum & USB_ENDPOINT_DIRECTION_MASK) {
        return;
    }
    
    EPNum &= EPNUM_MASK;

    out_requests[EPNum].ep = EPNum;
    out_requests[EPNum].data = out_data[EPNum];
    out_requests[EPNum].callback = read_callback;
    out_requests[EPNum].cbdata = &out_requests[EPNum];
    out_requests[EPNum].reqlen = 64;
    out_requests[EPNum].actlen = 0;
    out_requests[EPNum].type = MAXUSB_TYPE_PKT;

    MXC_USB_ReadEndpoint(&out_requests[EPNum]);

}

void USBD_DisableEP (U32 EPNum)
{
    if (EPNum & USB_ENDPOINT_DIRECTION_MASK) {
        return;
    }

    EPNum &= EPNUM_MASK;

    MXC_USBHS->introuten &= ~(1 << EPNum);
}

void USBD_SetStallEP (U32 EPNum)
{
    MXC_USB_Stall(EPNum & EPNUM_MASK);
}

void USBD_ClrStallEP (U32 EPNum)
{
    MXC_USB_Unstall(EPNum & EPNUM_MASK);
}

U32 USBD_ReadEP (U32 EPNum, U8 *pData, U32 size)
{
    EPNum &= EPNUM_MASK;

    if (EPNum == 0 && setup_waiting) {
        setup_waiting = 0;
        MXC_USB_GetSetup((MXC_USB_SetupPkt *)pData);
    } else {
        if (out_requests[EPNum].actlen > 0) {
            if (out_requests[EPNum].actlen > size)
                out_requests[EPNum].actlen = size;
            memcpy(pData, out_data[EPNum], out_requests[EPNum].actlen);
        }
        size = out_requests[EPNum].actlen;
    }

    return size;
}

U32 USBD_WriteEP (U32 EPNum, U8 *pData, U32 cnt)
{
    EPNum &= EPNUM_MASK;

    if (pData == NULL && cnt == 0) {
        MXC_USB_Ackstat(0);
        return 0;
    }

    memcpy(&write_req, &write_req_init, sizeof(MXC_USB_Req_t));

    write_req.ep = EPNum;
    write_req.data = pData;
    write_req.reqlen = cnt;
    
    if (MXC_USB_WriteEPPkg(&write_req) != 0) {
        cnt = 0;
    }

    return cnt;
}

void USBD_Handler(void)
{
    MXC_USB_EventHandler();
    
    NVIC_EnableIRQ(USB_IRQn);
}
